<resources>
    <string name="app_name">Save A Life Today</string>
    <string name="menu_drawer_main">Main</string>
    <string name="menu_drawer_map">Map</string>
    <string name="menu_drawer_user">User</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="menu_drawer_statistics">Statistics</string>
    <string name="menu_drawer_info">Info</string>
    <string name="allow_message_notifications">Allow message notifications</string>
    <string name="key_message_notification">key_message_notification</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a group of like-minded people, who completed the Udacity Android Developer challenge. This app would like to promote blood donation to help save more lives.</string>
    <string name="summary_version">0.1</string>
    <string name="title_version">Version</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="summary_support">Got any questions? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="action_settings">Settings</string>
</resources>
