<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/menu_drawer_main"
            android:title="@string/menu_drawer_main"/>
        <item
            android:id="@+id/menu_drawer_map"
            android:title="@string/menu_drawer_map"/>
        <item
            android:id="@+id/menu_drawer_user"
            android:title="@string/menu_drawer_user"/>
        <item
            android:id="@+id/menu_drawer_statistics"
            android:title="@string/menu_drawer_statistics"/>
        <item
            android:id="@+id/menu_drawer_settings"
            android:title="@string/drawer_menu_settings"/>
        <item
            android:id="@+id/menu_drawer_info"
            android:title="@string/menu_drawer_info"/>
    </group>
</menu>